--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @media (max-width: 768px){
 .hamburger{
 display: flex;
+  width:100%;
 }
 }
 
@@ -364,3 +365,4 @@ div .card{
   margin-top: 10px;
   font-size: 0.9rem;
 }
+
