--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-@media (max-width: 768px){
-.hamburger{
-display: flex;
-  width:100%;
-}
-}
 
 /* Reset básico */
 * {
@@ -19,37 +13,41 @@ body {
 
 }
 
-/* Header */
+
+  /* --- Header --- */
 header {
-   position: fixed;        /* lo fija en la pantalla */
-  top: 0;                 /* lo coloca arriba */
+  position: fixed;
+  top: 0;
   left: 0;
-  width: 100%;            /* que ocupe todo el ancho */
-  z-index: 1000;          /* que quede por encima del contenido */
-  
-  display: flex;          
+  width: 100%;
+  z-index: 1000;
+  display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px 0;
+  background-color: #000;
+  
 }
 
-
-ul {
-  border: 2px solid rgb(255, 187, 0); 
-  list-style: none;
-  display: flex;                       
+.nav-container {
+  width: 90%;
+  max-width: 1200px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 20px;                           
-  justify-content: center;
-   background-color: rgb(0, 0, 0);
-  width: max-content;                
-  margin: 0 auto;                     
-  padding: 10px 20px;                  
-  border-radius: 10px;                 
 }
 
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  background-color: #000;
+  padding: 10px 20px;
+  border-radius: 10px;
+  transition: all 0.3s ease;
+}
 
-li a {
+.nav-links li a {
   color: white;
   text-decoration: none;
   font-size: 25px;
@@ -57,9 +55,10 @@ li a {
   transition: color 0.3s;
 }
 
-li a:hover {
-  color: rgb(125, 0, 0);               
+.nav-links li a:hover {
+  color: rgb(125, 0, 0);
 }
+
 .hamburger {
   display: none;
   flex-direction: column;
@@ -365,4 +364,5 @@ div .card{
   margin-top: 10px;
   font-size: 0.9rem;
 }
+
 
