--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ header {
   padding: 10px;
  
 }
-.css, .Html, .JavaScript{
+.css, .Html, .JavaScript, .React{
   padding: 10px;
   color: #ffffff;
    font-size: 25px;
@@ -429,6 +429,7 @@ div .card{
   margin-top: 10px;
   font-size: 0.9rem;
 }
+
 
 
 
