--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@
 }
 
 body {
-  background-color: black;
-  font-family: Arial, sans-serif;
+  background-image: linear-gradient(black, rgb(0, 0, 0), rgb(255, 145, 2));
+font-family: 'Playfair Display', serif;
   overflow-x: hidden;
 
 }
@@ -273,7 +273,6 @@ header {
   gap: 10px;
   padding: 10px;
   
-  
 }
 .proyectos{
    scroll-margin-top: 80px;
@@ -339,6 +338,10 @@ div .card{
 
 /* --- Formulario --- */
 .contact-form {
+  padding: 15px;
+  background-color: #2A2A2A;
+  border-radius: 15px;
+  border: 3px solid rgb(255, 230, 0);
   display: flex;
   flex-direction: column;
   max-width: 500px;
@@ -437,7 +440,6 @@ strong{
         0 0 10px rgb(255, 255, 0),
         0 0 20px rgb(225, 255, 0),
 }
-
 
 
 
